--- a/src/app/cadastro-evento/cadastro-evento.component.html
+++ b/src/app/cadastro-evento/cadastro-evento.component.html
@@ -10,35 +10,44 @@
                         <div class="col-sm-6 b-r">
                             <h3 class="m-t-none m-b">Registro de evento</h3>
                             <p>Criação de Eventos.</p>
-                            <form role="form">
+                            <form #formEvento="ngForm"  (submit)="cadastrar($event)" role="form">
                                 <div class="form-group">
                                     <label>Tipo do Evento</label>
+                                    <select class="chosen-select">
+                                        <option value="">Selecione</option>
+                                        <option value="Esporte">Esporte</option>
+                                        <option value="Show">Show</option>
+                                        <option value="Teatro">Teatro</option>
+                                    </select>
                                 </div>
                                 <div class="form-group">
                                     <label>Descriação</label>
-                                    <input type="text" placeholder="Descriação" class="form-control">
+                                    <input type="text" placeholder="Descriação" name="descricao" [(ngModel)]="evento.descricao" required class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label>Data</label>
-                                    <input type="date" placeholder="Data" class="form-control">
+                                    <input type="date" placeholder="Data" name="data" [(ngModel)]="evento.data" required class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label>Cidade</label>
+                                    <select class="chosen-select">
+                                        <option value="">Selecione</option>
+                                    </select>
                                 </div>
                                 <div class="form-group">
                                     <label>Localização</label>
-                                    <textarea placeholder="Endereço completo" class="form-control"></textarea>
+                                    <textarea placeholder="Endereço completo" name="endereco" [(ngModel)]="evento.endereco" required class="form-control"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <label>Quantidade ingressos</label>
-                                    <input type="number" placeholder="Qtd" class="form-control">
+                                    <input type="number" placeholder="Qtd" name="qtd" [(ngModel)]="evento.qtd" required class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label>Valor Unitário</label>
-                                    <input type="number" placeholder="Valor Un" class="form-control">
+                                    <input type="text" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"  placeholder="Valor Un" name="valor" [(ngModel)]="evento.valor" required class="form-control">
                                 </div>
                                 <div>
-                                    <button class="btn btn-sm btn-primary float-right m-t-n-xs" type="submit">
+                                    <button [disabled]="!formEvento.valid" class="btn btn-sm btn-primary float-right m-t-n-xs" type="submit">
                                         <strong>Confirmar</strong>
                                     </button>
                                 </div>
