--- a/src/app/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/cadastro-pessoa/cadastro-pessoa.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="CPF" mask="999.999.999-99" [(ngModel)]="pessoa.cpf" pattern="([0-9]{2}[\.]?[0-9]{3}[\.]?[0-9]{3}[\/]?[0-9]{4}[-]?[0-9]{2})|([0-9]{3}[\.]?[0-9]{3}[\.]?[0-9]{3}[-]?[0-9]{2})" 
-                 name="cpf" ngModel required="" #cpf="ngModel">
+                 name="cpf" required="" #cpf="ngModel">
             </div>
             <div class="form-group">
                 <input type="email" class="form-control" placeholder="Email" [(ngModel)]="pessoa.email"
