--- a/src/app/pesquisa/pesquisa.component.html
+++ b/src/app/pesquisa/pesquisa.component.html
@@ -12,8 +12,7 @@
                 </div>
                 <select class="chosen-select">
                     <option value="">Selecione</option>
-                    <option value="United States">United States</option>
-                    <option value="United Kingdom">United Kingdom</option>
+                    <option value="{{cidade.descricao}}" *ngFor='let cidade of cidades; trackBy: index;'>{{cidade.descricao}}</option>
                 </select>
             </div>
             <div class="col-md-6">
@@ -23,8 +22,9 @@
                 </div>
                 <select class="chosen-select">
                     <option value="">Selecione</option>
-                    <option value="United States">United States</option>
-                    <option value="United Kingdom">United Kingdom</option>
+                    <option value="Esporte">Esporte</option>
+                    <option value="Show">Show</option>
+                    <option value="Teatro">Teatro</option>
                 </select>
             </div>
         </div>
