--- a/src/app/cadastro-cidade/cadastro-cidade.component.html
+++ b/src/app/cadastro-cidade/cadastro-cidade.component.html
@@ -10,20 +10,35 @@
                         <div class="col-sm-6 b-r">
                             <h3 class="m-t-none m-b">Registro de Cidades</h3>
                             <p>Criação de Cidades.</p>
-                            <form #formCidade="ngForm" (submit)="cadastrar($event)" role="form">
+                            <form #formCidade="ngForm" role="form">
                                 <div class="form-group">
                                     <label>Nome da cidade</label>
                                     <input type="text" placeholder="Descriação" name="descricao" [(ngModel)]="cidade.descricao" required class="form-control">
                                 </div>
                             </form>
                             <div>
-                                <button [disabled]="!formCidade.valid" class="btn btn-sm btn-primary float-right m-t-n-xs" type="submit">
+                                <button [disabled]="!formCidade.valid" (click)="cadastrar()" class="btn btn-sm btn-primary float-right m-t-n-xs">
                                     <strong>Confirmar</strong>
                                 </button>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <h4>Todos as Cidades</h4>
+                            <hr>
+                            <div class="tab-content">
+                                <div id="tab-1" class="tab-pane active">
+                                    <div class="full-height-scroll">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover">
+                                                <tbody>
+                                                    <tr *ngFor='let cidade of cidades; trackBy: index;'>
+                                                        <td>{{cidade.descricao}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                     
