--- a/src/app/cadastro-evento/cadastro-evento.component.html
+++ b/src/app/cadastro-evento/cadastro-evento.component.html
@@ -10,14 +10,14 @@
                         <div class="col-sm-6 b-r">
                             <h3 class="m-t-none m-b">Registro de evento</h3>
                             <p>Criação de Eventos.</p>
-                            <form #formEvento="ngForm"  (submit)="cadastrar($event)" role="form">
+                            <form #formEvento="ngForm" role="form"  autocomplete="off">
                                 <div class="form-group">
                                     <label>Tipo do Evento</label>
-                                    <select class="chosen-select">
-                                        <option value="">Selecione</option>
-                                        <option value="Esporte">Esporte</option>
-                                        <option value="Show">Show</option>
-                                        <option value="Teatro">Teatro</option>
+                                    <select class="select"aria-placeholder="Selecione" autocomplete="false" name="tipoEvento" [(ngModel)]="evento.tipoEvento">
+                                        <option ngValue="">Selecione</option>
+                                        <option ngValue="Esporte">Esporte</option>
+                                        <option ngValue="Show">Show</option>
+                                        <option ngValue="Teatro">Teatro</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
@@ -30,13 +30,14 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Cidade</label>
-                                    <select class="chosen-select">
-                                        <option value="">Selecione</option>
+                                    <select class="select" name="cidade" autocomplete="false" [(ngModel)]="evento.cidade">
+                                        <option ngValue="" selected>Selecione</option>
+                                        <option ngValue="{{cidade.descricao}}" *ngFor='let cidade of cidades; trackBy: index;'>{{cidade.descricao}}</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
                                     <label>Localização</label>
-                                    <textarea placeholder="Endereço completo" name="endereco" [(ngModel)]="evento.endereco" required class="form-control"></textarea>
+                                    <textarea placeholder="Endereço completo" autocomplete="off" name="endereco" [(ngModel)]="evento.endereco" required class="form-control"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <label>Quantidade ingressos</label>
@@ -47,7 +48,7 @@
                                     <input type="text" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"  placeholder="Valor Un" name="valor" [(ngModel)]="evento.valor" required class="form-control">
                                 </div>
                                 <div>
-                                    <button [disabled]="!formEvento.valid" class="btn btn-sm btn-primary float-right m-t-n-xs" type="submit">
+                                    <button (click)="cadastrar()" [disabled]="!formEvento.valid" class="btn btn-sm btn-primary float-right m-t-n-xs" type="submit">
                                         <strong>Confirmar</strong>
                                     </button>
                                 </div>
@@ -55,6 +56,30 @@
                         </div>
                         <div class="col-sm-6">
                             <h4>Todos os Eventos</h4>
+                            <div class="input-group">
+                                <input type="text" placeholder="Todos os Eventos" class="input form-control">
+                                <span class="input-group-append">
+                                        <button type="button" class="btn btn btn-primary"> <i class="fa fa-search"></i> Pesquisar</button>
+                                </span>
+                            </div>
+                            <hr>
+                            <div class="tab-content">
+                                <div id="tab-1" class="tab-pane active">
+                                    <div class="full-height-scroll">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover">
+                                                <tbody>
+                                                    <tr *ngFor='let evento of eventos; trackBy: index;'>
+                                                        <td>{{evento.descricao}}</td>
+                                                        <td>{{evento.data | date:'d/M/yyyy'}}</td>
+                                                        <td>{{evento.valor | currency:'BRL'}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
