--- a/src/app/quadro-geral-evento/quadro-geral-evento.component.html
+++ b/src/app/quadro-geral-evento/quadro-geral-evento.component.html
@@ -20,30 +20,23 @@
                                 <th>#</th>
                                 <th>Evento </th>
                                 <th>Data </th>
-                                <th>Quantidade ingressos Vendidos </th>
-                                <th>Quantidade Ingressos Disponível </th>
+                                <th>Ingressos Vendidos </th>
+                                <th>Ingressos Disponível </th>
                                 <th>Valor Uni</th>
                                 <th>Cidade</th>
                                 <th>Local</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>4</td>
-                                <td>Gamma project</td>
-                                <td>Anna Jordan</td>
-                                <td>(016977) 0648</td>
-                                <td>Tellus Ltd</td>
-                                <td>
-                                    <span class="pie">4,9</span>
-                                </td>
-                                <td>18%</td>
-                                <td>Jul 22, 2013</td>
-                                <td>
-                                    <a href="#">
-                                        <i class="fa fa-check text-navy"></i>
-                                    </a>
-                                </td>
+                            <tr *ngFor='let evento of eventos; trackBy: index;'>
+                                <td>{{$index}}</td>
+                                <td>{{evento.descricao}}</td>
+                                <td>{{evento.data | date:'d/M/yyyy'}}</td>
+                                <td>{{evento.qtd}}</td>
+                                <td>{{evento.qtd}}</td>
+                                <td>{{evento.valor | currency:'BRL'}}</td>
+                                <td>{{evento.cidade}}</td>
+                                <td>{{evento.endereco}}</td>
                             </tr>
                         </tbody>
                     </table>
