--- a/src/app/painel-logo/painel-logo.component.html
+++ b/src/app/painel-logo/painel-logo.component.html
@@ -15,17 +15,10 @@
                       <div class="col-md-4">
                           <ul class="stat-list m-t-lg mlt-xs">
                               <li>
-                                  <h1 class="no-margins">2,346</h1>
+                                  <h1 class="no-margins">{{totalEventos}}</h1>
                                   <span>Total de Eventos</span>
                                   <div class="progress progress-mini">
-                                      <div class="progress-bar" style="width: 48%;"></div>
-                                  </div>
-                              </li>
-                              <li>
-                                  <h1 class="no-margins ">4,422</h1>
-                                  <span>total de Ingressos Vendidos</span>
-                                  <div class="progress progress-mini">
-                                      <div class="progress-bar" style="width: 60%;"></div>
+                                      <div class="progress-bar" style="width: 100%;"></div>
                                   </div>
                               </li>
                           </ul>
