--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -3,10 +3,10 @@
         <h5>
             <i class="fa fa-shopping-cart fa-1x"></i>&nbsp;Seu Carrinho</h5>
     </div>
-    <div class="ibox-content ">
+    <div class="ibox-content " style="cursor: pointer" [routerLink]="['/principal',{outlets: {pri:['carrinhoDetalhe']}}]">
         <div class="row">
             <div class="col-md-3 ">
-                <h1 style="font-size: 50px;" class="no-margins float-right">0</h1>
+                <h1 style="font-size: 50px;" class="no-margins float-right">{{quantidade()}}</h1>
                 <div class="font-bold text-navy">itens</div>
             </div>
             <div class="col-md-9">
