--- a/src/app/lista-evento/lista-evento.component.html
+++ b/src/app/lista-evento/lista-evento.component.html
@@ -1,25 +1,24 @@
 <div class="row justify-content-md-center">
-    <div class="col-lg-12">
+    <div class="col-lg-12  d-none d-xl-block d-lg-block d-md-block">
         <h4 class="text-center m">
             Todos Eventos
         </h4>
         <div class="slick">
             <div *ngFor='let evento of eventos; trackBy: index;'>
                 <div class="contact-box center-version" >
-                    <a role="button" href="#">
+                    <a>
                         <img alt="image" class="rounded-circle" src="assets/img/{{evento.img}}-min.png">
                         <h3 class="m-b-xs">
                             <strong>{{evento.descricao}}</strong>
                         </h3>
                         <div class="font-bold">{{evento.data | date:'d/M/yyyy'}}</div>
-                        <address class="m-t-md">
-                                {{evento.cidade}} - {{evento.endereco}}
+                        <address class="m-t-md" style="cursor:zoom-out" title="{{evento.cidade}} - {{evento.endereco}}">
+                                <span class="textoEndereco">{{evento.cidade}} - {{evento.endereco}}</span>
                         </address>
                     </a>
                     <div class="contact-box-footer">
                         <div class="m-t-xs btn-group">
-                            <a href="" class="btn btn-sm btn-primary">
-                                <i class="fa fa-money"></i> Comprar Igresso </a>
+                            <p><strong>Valor:</strong> {{evento.valor | currency:'BRL'}}</p>
                         </div>
                     </div>
                 </div>
